--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.3",
-    "inquirer": "^8.2.1"
+    "inquirer": "^8.2.1",
+    "uuid": "^8.3.2"
   }
 }
